--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,31 @@
-# Build Stage
-FROM golang:1.22-alpine AS builder
+# Stage 1: Build the React Application
+FROM node:22-alpine AS builder
 
 WORKDIR /app
 
-# Copy dependency files first (cached layers)
-COPY go.mod ./
-# (We don't have go.sum yet because we haven't added dependencies, so we skip copying it for now)
+# Copy dependency definitions
+COPY package.json package-lock.json ./
 
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the source code
 COPY . .
 
-# Build the Go app
-# We point to main.go inside cmd/server
-RUN go build -o main ./cmd/server/main.go
+# Build the app for production (creates the 'dist' folder)
+RUN npm run build
 
-# Run Stage
-FROM alpine:latest
-WORKDIR /root/
-COPY --from=builder /app/main .
+# Stage 2: Serve the App with Nginx
+FROM nginx:alpine
 
-EXPOSE 8080
+# Clean the default Nginx static files
+RUN rm -rf /usr/share/nginx/html/*
 
-CMD ["./main"]
+# Copy the built React files from the builder stage
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Expose port 80 (standard HTTP port)
+EXPOSE 80
+
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
